Random choice picker

--- a/Random_choicepicker/index.html
+++ b/Random_choicepicker/index.html
@@ -13,8 +13,8 @@
 
 
         <div id="tags">
-            <span class="tag">Choice 1</span>
-            <span class="tag highlight">Choice 2</span>
+            <span class="tag">choice 1</span>
+            <span class="tag highlight">choice 2</span>
             <span class="tag">Choice 3</span>
             
         </div>
